2008-01-11  Martin Lambers <marlam@marlam.de>

	* cvl/cvl_hdr.c: Fix documentation of cvl_tonemap_schlick94().
	* doc/cvl.texi, doc/cvtool.1, doc/doxy/doxyfile: Bump version to
	0.2.3.

2008-01-10  Martin Lambers <marlam@marlam.de>

	* NEWS: Update.
	* cvtool/cvtool.c: Update copyright year in --version output.

2008-01-09  Martin Lambers <marlam@marlam.de>

	* cvl/glsl/color/pseudo_color.glsl: Fix pseudo color computation: Use
	the hue values in the opposite direction.
	* cvl/cvl_hdr.c, cvl/cvl/cvl_hdr.h,
	cvl/glsl/hdr/tonemap_tumblinrushmeier99_step1.glsl,
	cvl/glsl/hdr/tonemap_tumblinrushmeier99_step2.glsl, cvl/Makefile.am: 
	Add cvl_tonemap_tumblinrushmeier99().
	* cvtool/cmd_tonemap.c, tests/cmd_tonemap.sh, doc/cvtool.texi: Add the
	tumblinrushmeier99 method to the tonemap command.
	* cvl/cvl_hdr.c, cvl/cvl/cvl_hdr.h,
	cvl/glsl/hdr/tonemap_schlick94.glsl, cvl/Makefile.am: Add
	cvl_tonemap_schlick94().
	* cvtool/cmd_tonemap.c, tests/cmd_tonemap.sh, doc/cvtool.texi: Add the
	schlick94 method to the tonemap command.

2008-01-08  Martin Lambers <marlam@marlam.de>

	* doc/cvtool.texi: Fix description of color command.
	* doc/cvtool.texi: Use standard format in command descriptions.

2007-12-09  Martin Lambers <marlam@marlam.de>

	* cvl/Makefile.am: Add glsl/mix/mix.glsl.

2007-12-06  Martin Lambers <marlam@marlam.de>

	* mhlib/mh_os.h: Add MH_STDIN, MH_STDOUT.

2007-11-18  Martin Lambers <marlam@marlam.de>

	* cvtool/cmd_mix.c: Avoid invalid weights. 

2007-11-05  Martin Lambers <marlam@marlam.de>

	* cvtool/cmd_mix.c: Fix typo in help text.

2007-10-31  Martin Lambers <marlam@marlam.de>

	* cvl/cvl_misc.c: Fix documentation of cvl_statistics().

2007-10-28  Martin Lambers <marlam@marlam.de>

	* cvl/cvl_misc.c: In cvl_statistics(): do not compute the sum of all
	elements if not needed.

2007-10-26  Martin Lambers <marlam@marlam.de>

	* cvtool/cmd_mix.c, doc/cvtool.texi: Improve the mix command.

2007-10-25  Martin Lambers <marlam@marlam.de>
