@@ -1,5 +1,5 @@
 /*
- * tonemap_tumblinrushmeier_step1.glsl
+ * tonemap_tumblin_step1.glsl
  * 
  * This file is part of CVL, a computer vision library.
  *
